assets/css/style.css
/* ... */
/* Au survol : span 2 se déplie, l'ensemble (span1 + span2) reste centré
   grâce aux padding symétriques (35px) de la li */
.home-steps .flex-list:hover > span.secondary-font {
	/*max-height: 300px;*/
	max-height: max-content;
	opacity: 1;
	margin-top: 15px;
}

ul.flex-lists-wrapper li.flex-list+span:first-of-type {
	margin-bottom: 15px;
}

ul.flex-lists-wrapper li.flex-list+span:nth-of-type(2) {
	width: 85%;
	opacity:0;
	transition: opacity 0.3s;
	
}
ul.flex-lists-wrapper li.flex-list:hover+span:nth-of-type(2) {
	opacity:1;
}

.category-protfolio {
	position: relative;
	text-decoration: none;
}

.category-protfolio::before {
	background: hsl(213.68, 24.26%, 53.92%);
	content: "";
	inset: 0;
	position: absolute;
	transform: scaleX(0);
	transform-origin: right;
	transition: transform 0.5s ease-in-out;
	z-index: -1;
}

.category-protfolio:hover::before {
	transform: scaleX(1);
	transform-origin: left;
}

ul li .category-protfolio+small {
	display: block;
	font-size: x-large;
	letter-spacing: normal;
	color: dimgray;
	line-height: normal;
}

/*--------------------------------------------------
	12. Contact page
---------------------------------------------------*/
#my-form {
	color: #FFFFFF;
}

#my-form label {
	margin-top: 20px;
	text-align: left;
	display: block;
}

#my-form input:not([type='checkbox']),
#my-form textarea {
	width: 100%;
	padding: 10px;
	font-family: inherit;
}
#my-form input[type='checkbox'] {
	width: auto;
    height: auto;
}
#my-form input::placeholder {
	color: lightgray;
}

#my-form-button {
	padding-right: 20px;
	padding-left: 20px;
	position: relative;
	text-decoration: none;
}

#my-form-button:hover {
	color: #000;
	border-color: #FFF;
}

#my-form-button::before {
	background: hsl(0, 0%, 100%);
	content: "";
	inset: 0;
	position: absolute;
	transform: scaleX(0);
	transform-origin: right;
	transition: transform 0.5s ease-in-out;
	z-index: -1;
}

#my-form-button:hover::before {
	transform: scaleX(1);
	transform-origin: left;
}

.box-icon i {
	color: #FFFFFF;
}

.box-icon-content {
	font-size: 18px;
	line-height: 36px;
	font-weight: 400;
	letter-spacing: -0.03vw;
}

/*--------------------------------------------------
	13. Portfolio page
---------------------------------------------------*/
.slide-caption2 {
	z-index: 10;
	position: absolute;
	left: 0px;
	top: 0;
	height: 100%;
	width: 100%;
	box-sizing: border-box;
	padding: 25px 30px;
	cursor: default;
	pointer-events: none;
	text-align: left;
	opacity: 0;
	display: flex;
	align-items: center;
	justify-content: space-between;
	-webkit-transition: all 0.15s ease-out 0s;
	transition: all 0.15s ease-out 0s;
}

.slide-caption .slide-title,
.slide-caption .slide-cat {
	color: #FFFFFF;
}

.slide-caption .slide-title span,
.slide-caption .slide-cat span {
	background-color: rgba(0, 0, 0, 0.3);
	border-radius: 5px;
	padding-right: 20px;
	padding-left: 20px;
}

.slide-caption .slide-date {
	background-color: rgba(0, 0, 0, 0.3);
}
@media all and (max-width: 430px) {
	.showcase-portfolio .slide-caption .slide-cat {
		display: none;
	}
}

/*--------------------------------------------------
	14. Home page
---------------------------------------------------*/
.home-portfolio-link{
	color: var(--color-brand-blue)!important;
}
.sr-only {
	position: absolute;
	width: 1px;
	height: 1px;
	padding: 0;
	margin: -1px;
	overflow: hidden;
	clip: rect(0, 0, 0, 0);
	white-space: nowrap;
	border: 0;
}

img.black-logo {
	max-width: 50vw!important;
}

img.baseline {
	max-width: 800px;
    width: 95vw;
}

#hero-interaction {
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	width: 100%;
}

#hero-interaction .hero-column {
	display: flex;
	flex-direction: column;
	flex-basis: 100%;
	flex: 1;
}

.category-protfolio {
	position: relative;
	text-decoration: none;
}

.category-protfolio::before {
	/*background: hsl(0, 0%, 100%);*/
	content: "";
	inset: 0;
	position: absolute;
	transform: scaleX(0);
	transform-origin: right;
	transition: transform 0.5s ease-in-out;
	z-index: -1;
}

.category-protfolio:hover::before {
	transform: scaleX(1);
	transform-origin: left;
}

.savoirfaires {
	display: flex;
	width: 100%;
	flex-direction: row;
}

.landing-intro-wrapper,
.one_fourth2 {
	flex: 1;
	width: 50%;
}

.one_fourth2,
.one_fourth3 {
	align-self: flex-end;
}

.one_fourth2 .landing-video-disabled.content-timeline-disabled {
	width: 50%;
	margin-left: auto;
	margin-right: 0px;

}

.one_fourth3 .inner_one_fourth3 {
	width: 25%;
	margin-left: auto;
	margin-right: 0px;

}

@media all and (max-width: 1025px) {
	.savoirfaires {
		flex-direction: column;
	}

	.hero-title-placeholder+span a {
		padding-top: 60px;
	}

	.landing-intro-wrapper {
		width: 100%;
	}

	.one_fourth2 .landing-video-disabled.content-timeline-disabled {
		width: 100%;
	}

	.one_fourth3 .inner_one_fourth3 {
		width: 50%;
	}
}

.savoirfaires {
	background: var(--color-brand-blue-bg);
	background: linear-gradient(0deg, rgba(212, 222, 234, 1) 0%, rgba(212, 222, 234, 1) 85%, rgba(255, 255, 255, 0) 100%);
}

.savoirfaires .new-hero-title {
	display: contents !important;
}

.savoirfaires .new-hero-title span {
	font-size: calc((1rem + 8vw) / 2);
	line-height: calc((1rem + 10vw) / 2);
}

.savoirfaires .new-hero-title span small {
	font-size: calc((0.5rem + 4vw) / 2);
	line-height: calc((0.5rem + 4vw) / 2);
	letter-spacing: 0.01rem;
	display: block;
	color: dimgray;
}

.home-steps {
	background: var(--color-brand-tan);
	background: linear-gradient(0deg, rgba(255, 255, 255, 0) 0%, var(--color-brand-tan) 5%, var(--color-brand-tan) 100%);
	padding-left: 60px;
	padding-right: 60px;
}
/* ... */

